--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Setup
