--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,33 +1,42 @@
 name: Autograding Tests
 'on':
-- workflow_dispatch
-- repository_dispatch
+  - workflow_dispatch
+  - repository_dispatch
+
 permissions:
   checks: write
   actions: read
   contents: read
+
 jobs:
   run-autograding-tests:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
-    - name: Set up Python
+
+    - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
+
     - name: Checkout code
       uses: actions/checkout@v4
+
     - name: Setup
       id: setup
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Setup
-        setup-command: sudo -H pip3 install -qr requirements.txt; sudo -H pip3 install
-          flake8==5.0.4
-        command: flake8 --ignore "N801, E203, E266, E501, W503, F812, E741, N803,
-          N802, N806" minitorch/ tests/ project/; mypy minitorch/*
+        setup-command: |
+          sudo -H pip3 install -qr requirements.txt
+          sudo -H pip3 install flake8==5.0.4
+          sudo -H pip3 install mypy
+        command: |
+          flake8 --ignore "N801, E203, E266, E501, W503, F812, E741, N803, N802, N806" minitorch/ tests/ project/
+          mypy minitorch/*
         timeout: 10
         max-score: 10
+
     - name: Task 1.1
       id: task-1-1
       uses: classroom-resources/autograding-command-grader@v1
@@ -37,6 +46,7 @@ jobs:
         command: pytest -m task1_1
         timeout: 10
         max-score: 10
+
     - name: Task 1.2
       id: task-1-2
       uses: classroom-resources/autograding-command-grader@v1
@@ -45,6 +55,7 @@ jobs:
         setup-command: sudo -H pip3 install -qr requirements.txt
         command: pytest -m task1_2
         timeout: 10
+
     - name: task 1.3
       id: task-1-3
       uses: classroom-resources/autograding-command-grader@v1
@@ -53,6 +64,7 @@ jobs:
         setup-command: sudo -H pip3 install -qr requirements.txt
         command: pytest -m task1_3
         timeout: 10
+
     - name: Task 1.4
       id: task-1-4
       uses: classroom-resources/autograding-command-grader@v1
@@ -61,6 +73,7 @@ jobs:
         setup-command: sudo -H pip3 install -qr requirements.txt
         command: pytest -m task1_4
         timeout: 10
+
     - name: Autograding Reporter
       uses: classroom-resources/autograding-grading-reporter@v1
       env:
