--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -28,9 +28,9 @@ jobs:
       with:
         test-name: Setup
         setup-command: |
-          sudo -H pip3 install -qr requirements.txt
-          sudo -H pip3 install flake8==5.0.4
-          sudo -H pip3 install mypy
+          pip install -qr requirements.txt
+          pip install flake8==5.0.4
+          pip install mypy
         command: |
           flake8 --ignore "N801, E203, E266, E501, W503, F812, E741, N803, N802, N806" minitorch/ tests/ project/
           mypy minitorch/*
@@ -42,7 +42,7 @@ jobs:
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Task 1.1
-        setup-command: sudo -H pip3 install -qr requirements.txt
+        setup-command: pip install -qr requirements.txt
         command: pytest -m task1_1
         timeout: 10
         max-score: 10
@@ -52,16 +52,16 @@ jobs:
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Task 1.2
-        setup-command: sudo -H pip3 install -qr requirements.txt
+        setup-command: pip install -qr requirements.txt
         command: pytest -m task1_2
         timeout: 10
 
-    - name: task 1.3
+    - name: Task 1.3
       id: task-1-3
       uses: classroom-resources/autograding-command-grader@v1
       with:
-        test-name: task 1.3
-        setup-command: sudo -H pip3 install -qr requirements.txt
+        test-name: Task 1.3
+        setup-command: pip install -qr requirements.txt
         command: pytest -m task1_3
         timeout: 10
 
@@ -70,7 +70,7 @@ jobs:
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Task 1.4
-        setup-command: sudo -H pip3 install -qr requirements.txt
+        setup-command: pip install -qr requirements.txt
         command: pytest -m task1_4
         timeout: 10
 
