--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -30,7 +30,7 @@ jobs:
         setup-command: |
           pip install -qr requirements.txt
           pip install flake8==5.0.4
-          pip install mypy
+          pip install mypy==1.10.0
         command: |
           flake8 --ignore "N801, E203, E266, E501, W503, F812, E741, N803, N802, N806" minitorch/ tests/ project/
           mypy minitorch/*
